--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "wall",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy": "npm run build && cp CNAME dist",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -b gh-pages -d dist"
   },
   "dependencies": {
