--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,9 @@
-image: ruby:latest
-
 pages:
+  stage: deploy
   script:
-    - gem install bundler
-    - bundle install
-    - bundle exec jekyll build -d public
+    - rm -rf public && mv dist public
   artifacts:
     paths:
       - public
+  rules:
+    - if: $CI_COMMIT_BRANCH == "deploy"
